--- a/paper/main.tex
+++ b/paper/main.tex
@@ -155,7 +155,7 @@ The K-Nearest Neighbors (KNN) model achieved a Mean Absolute Error (MAE) of 25.7
     \label{fig:knn}
 \end{figure}
 
-In Figure \ref{fig:knn}, the predicted values (red line) generally follow the trend of the actual cases (blue line) in some periods but fail to capture the magnitude during spikes accurately. The model struggles to predict extreme increases and decreases in dengue cases, resulting in significant underestimation or overestimation during peaks. For instance, during periods of rapid increase or decrease, the model fails to reflect the true magnitude of changes. This limitation is likely due to KNN’s sensitivity to the nearest neighbors, which may not represent rare or extreme patterns effectively. While it captures overall patterns, the high variability in dengue cases poses a challenge for this model.
+In Figure \ref{fig:knn}, the predicted values (red line) generally follow the trend of the actual cases (blue line) in some periods but fail to capture the exact magnitudes of the dengue cases. The model struggles to predict extreme increases and decreases in dengue cases, resulting in significant underestimation or overestimation during peaks. For instance, during periods of rapid increase or decrease, the model fails to reflect the true magnitude of changes. This limitation is likely due to KNN’s sensitivity to the nearest neighbors, which may not represent rare or extreme patterns effectively. While it captures overall patterns, the high variability in dengue cases poses a challenge for this model.
 
 \subsubsection{SVR Model}
 The Support Vector Regression (SVR) model shows an MAE of 15.3458, implying moderately accurate predictions with an average error of 15.35 cases. The MSE of 898.0991 and the RMSE of 29.9683 show improvement over KNN, with smaller squared errors and deviations.
@@ -166,7 +166,7 @@ The Support Vector Regression (SVR) model shows an MAE of 15.3458, implying mode
     \label{fig:svr}
 \end{figure}
 
-In Figure \ref{fig:svr}. The predicted values (red line) deviate significantly from the actual values (blue line) in both low and high dengue case ranges. The model performs reasonably well in capturing overall trends in moderate ranges.
+In Figure \ref{fig:svr}. Although the predicted values follow the trend of the actual values closely, The predicted values (red line) deviate significantly from the actual values (blue line) in high dengue case ranges. The model performs reasonably well in capturing overall trends in moderate ranges.
 
 \subsubsection{ANN Model}
 The ANN model has the lowest MAE, indicating that it generally makes more accurate predictions, with deviations around 13.53 units on average. The Mean Squared Error (MSE) of 748.0170 reveals notable variability between actual and predicted values, particularly at higher case counts. The Root Mean Squared Error (RMSE) of 27.3499 is also relatively low, suggesting that the model has fewer large errors compared to KNN.
@@ -177,7 +177,7 @@ The ANN model has the lowest MAE, indicating that it generally makes more accura
     \label{fig:ann}
 \end{figure}
 
-In Figure \ref{fig:ann}. the ANN model aligns closely with the actual dengue case trends, particularly in low to moderate ranges. However, during extreme spikes, the model either underestimates or overshoots the actual values. This reflects the ANN’s strength in capturing nonlinear patterns due to its architecture, though it still faces challenges in modeling abrupt changes due to limited training data on such rare events.
+In Figure \ref{fig:ann}. the ANN model aligns closely with the actual dengue case trends, particularly in low to moderate ranges. However, during extreme spikes, the model underestimates the actual values. This reflects the ANN’s strength in capturing nonlinear patterns due to its architecture, though it still faces challenges in modeling abrupt changes due to limited training data on such rare events.
 
 \subsubsection{XGBoost Regressor Model}
 The XGBoost model achieved an MAE of 18.8749, showing good accuracy in minimizing the average prediction errors. The MSE is 759.4290, indicating moderate variability in predictions. The RMSE of 27.5577 reflects that while the model performs well overall, it struggles slightly with outliers or extreme spikes in dengue cases.
@@ -189,7 +189,7 @@ The XGBoost model achieved an MAE of 18.8749, showing good accuracy in minimizin
     \label{fig:xgb}
 \end{figure}
 
-In Figure \ref{fig:xgb}. The XGBoost model effectively captures the overall trend of dengue case fluctuations. The model performs reliably in predicting low to moderate dengue cases, with a reasonable alignment between actual and predicted values for dengue cases. There is a slight overshooting however for sudden spikes. The ensemble-based nature of XGBoost provides robustness and good generalization, though fine-tuning could potentially improve performance for extreme cases.
+In Figure \ref{fig:xgb}. The XGBoost model effectively captures the overall trend of dengue case fluctuations. The model performs reliably in predicting low to moderate dengue cases, with a reasonable alignment between actual and predicted values for dengue cases. There is a slight overshooting however for small spikes in the dataset. The ensemble-based nature of XGBoost provides robustness and good generalization, though fine-tuning could potentially improve performance for extreme cases.
 
 \subsubsection{Linear Regression Model}
 The Linear Regression model achieved a Mean Absolute Error (MAE) of 16.3724, indicating a low average error and a high degree of accuracy. The Mean Squared Error (MSE) of 874.2463 suggests limited variability in predictions, demonstrating the model's strong ability to generalize across data. Additionally, the Root Mean Squared Error (RMSE) of 29.5676 highlights the model's robust performance, even when larger errors are penalized more significantly.\\
@@ -201,10 +201,10 @@ The Linear Regression model achieved a Mean Absolute Error (MAE) of 16.3724, ind
     \label{fig:lr}
 \end{figure}
 
-Figure \ref{fig:lr}. shows that the predicted values (red) closely follow the trends of the actual values (blue), showcasing Linear Regression's capability to effectively capture patterns in low and moderate case ranges. Although slight deviations occur in high-peak regions, the model remains consistent and aligns well with the actual data. We have to keep in mind thought that the preprocessing techniques, such as moving averages, have helped reduce noise, allowing the model to focus on broader patterns effectively.
+Figure \ref{fig:lr}. shows that the predicted values (red) closely follow the trends of the actual values (blue), showcasing Linear Regression's capability to effectively capture patterns in low and moderate case ranges. Although slight deviations occur in high-peak regions, the model remains consistent and aligns well with the actual data. However, we have to keep in mind that the preprocessing techniques, such as moving averages, have helped reduce noise, allowing the model to focus on broader patterns effectively.
 
 \subsubsection{Random Forest Model}
-The Random Forest model achieved an MAE of 16.7267, indicating that, on average, its predictions are off by about 17 dengue cases. The MAE for Random Forest is relatively similar to that of linear regression, indicating moderate prediction accuracy, but still not as good as ANN. The MSE for Random Forest is the lowest, which indicates that its predictions are relatively close to the actual values, with fewer extreme errors. Random Forest has a lower RMSE than any other model, showing fewer large errors compared to the other models.
+The Random Forest model achieved an MAE of 16.7267, indicating that, on average, its predictions are off by about 17 dengue cases. The MAE for Random Forest is relatively similar to that of linear regression, indicating moderate prediction accuracy, but still not as good as ANN. However, the MSE for Random Forest is the lowest, which indicates that its predictions are relatively close to the actual values, with fewer extreme errors. Random Forest has a lower RMSE than any other model, showing fewer large errors compared to the other models.
 
 
 \begin{figure}[h!]
