update ann methodology

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -97,7 +97,7 @@ The number of neighbors (k) was set to 7, which was selected after experimentati
 \end{itemize}
 
 \subsubsection{Artificial Neural Network}
-The model was trained with a learning rate of 0.001, utilizing the Adam optimizer to ensure efficient training. The training process was set to run for 200 epochs, with a batch size of 16, meaning 16 training samples were processed per iteration. To capture complex patterns without overfitting, a hidden layer consisting of 64 neurons was chosen. The architecture followed a Sequential Neural Network design, incorporating an input layer, one hidden layer, and an output layer. Additionally, early stopping was implemented to prevent overfitting by monitoring the validation performance during training.
+The model was trained with a learning rate of 0.001, utilizing the Adam optimizer to ensure efficient training. The training process was set to run for 200 epochs, with a batch size of 16, meaning 16 training samples were processed per iteration. To capture complex patterns without overfitting, a hidden layer consisting of 64 neurons with a ReLU activation function was chosen. The architecture followed a Sequential Neural Network design, incorporating an input layer, one hidden layer, and an output layer. Additionally, early stopping was implemented to prevent overfitting by monitoring the validation performance during training.
 
 \subsubsection{XGBoost Regressor Model}
 The model was trained using XGBoost with the following hyperparameters: 200 boosting rounds to enhance model performance, and a learning rate of 0.05 to promote better generalization. The maximum depth of the decision trees was set to 6 to control overfitting, while the minimum child weight was set to 1 to regulate the minimum sum of instance weights in each child. To further prevent overfitting, subsample, and colsamplebytree were both set to 0.8, indicating that 80\% of the samples and features, respectively, were used for each tree. 
