remove standard scaler

--- a/ML Code/DENGUE_DASH_ML.ipynb
+++ b/ML Code/DENGUE_DASH_ML.ipynb
@@ -70,7 +70,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler  # For feature scaling (normalization)\n",
+    "from sklearn.preprocessing import MinMaxScaler  # For feature scaling (normalization)\n",
     "\n",
     "# Machine Learning Algorithms\n",
     "import xgboost as xgb\n",
@@ -549,7 +549,7 @@
     "        model: Union[SVR, KNeighborsRegressor, LinearRegression, RandomForestRegressor, Sequential, xgb.XGBRegressor], \n",
     "        X_test: pd.DataFrame, \n",
     "        y_test: pd.Series, \n",
-    "        scaler_target: StandardScaler\n",
+    "        scaler_target: MinMaxScaler\n",
     "    ):\n",
     "    \"\"\"\n",
     "    Evaluate a given model and display its performance metrics.\n",
@@ -628,7 +628,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_results(test_results: pd.DataFrame):\n",
+    "def plot_results(test_results):\n",
     "    \"\"\"\n",
     "    Plot actual vs predicted values.\n",
     "    \"\"\"\n",
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "mrtTstf2XFgc"
    },
@@ -1050,12 +1050,10 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
