--- a/paper/main.tex
+++ b/paper/main.tex
@@ -87,7 +87,7 @@ The historical dengue case dataset used in this study was obtained from the Huma
 
 \subsubsection{Data Integration and Preprocessing}
 The dengue case data was integrated with the weather data to create a comprehensive dataset\footnote{For reference of the complete dataset:\\ 
-	\url{https://github.com/HENERALPEPITO/ML-miniproject/tree/main/datasets}}, aligning the data based on corresponding timeframes. The dataset undergoed a cleaning process to address any missing values, outliers, and inconsistencies to ensure its accuracy and reliability. To ensure that all features and the target variable were on the same scale, a MinMaxScaler was applied to normalize both the input features (rainfall, temperature, humidity) and the target variable (dengue cases). To enhance the quality of the data and minimize the impact of random short-term fluctuations, moving averages was applied to selected columns, including rainfall, humidity, and temperature. This approach will help to filter out 'noise' and provide a clearer representation of the underlying trends.
+	\url{https://github.com/HENERALPEPITO/ML-miniproject/tree/main/datasets}}, aligning the data based on corresponding timeframes. The dataset undergoed a cleaning process to address any missing values, outliers, and inconsistencies to ensure its accuracy and reliability. To ensure that all features and the target variable were on the same scale, a MinMaxScaler was applied to normalize both the input features (rainfall, temperature, humidity) and the target variable (dengue cases). To enhance the quality of the data and minimize the impact of random short-term fluctuations, moving averages was applied to selected columns, including rainfall, humidity, temperature, and cases. This approach will help to filter out 'noise' and provide a clearer representation of the underlying trends.
 
 \subsection{Model Training}
 The following models were selected and trained using the Scikit-learn Python library to forecast dengue cases based on historical weather and case data. The dataset will be split into training and testing sets, ensuring temporal continuity is maintained to avoid data leakage. All models are grid-searched in each specific hyperparameter, and each model was fine-tuned for optimal performance:
